Tabber scroll - issue 532 (#561)
* feat: scroll in tabber and remove height and width fix

* feat: scrollbar hidden and fade effect

* fix: gradient color

* fix: increase opacity

* fix: scroll with gsap

* feat: create the base test

* fix: scrollto animation

* fix: remove horizontalscrollhook tests

* fix: consistency of scrollToElement

* feat: boolean of hasMoreOnLeft or hasMoreOnRight

* fix: imports desnececssary

* fix: gradient

* fix: scrolltoelemnt comportament and fix gradient

* fix: remove desnecessary states

* fix: height and alias

---------

--- a/src/components/Tabber/Tabs/Tabs.module.scss
+++ b/src/components/Tabber/Tabs/Tabs.module.scss
@@ -1,9 +1,56 @@
-﻿@use '../../../styles/global';
+@use '~styles/global';
 
 .tabsContainer {
   width: 100%;
+  overflow-x: auto;
 
   display: flex;
+
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.tabsWrapper {
+  height: 100%;
+
+  position: relative;
+}
+
+.firstGradient,
+.lastGradient {
+  width: 35px;
+  height: 100%;
+
+  position: absolute;
+  z-index: 1;
+
+  pointer-events: none;
+
+  content: '';
+}
+
+.firstGradient {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.lastGradient {
+  top: 0;
+  right: 0;
+
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 .tab {
@@ -14,6 +61,8 @@
   align-items: center;
 
   color: global.$tertiaryGray;
+
+  white-space: nowrap;
 
   padding: 0.75rem 1rem;
 
